arkts_static_test/17_Experimental_Features/ets_cases/17.9.3_Explicit_Interface_Method_Overload/compile-fail/EXP2_17_09_3_010_FAIL_NO_ACCESSIBLE_METHOD.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id EXP2_17_09_3_010_FAIL_NO_ACCESSIBLE_METHOD
 * @expect compile-fail
 * @section 17.9.3
 * @design NO_ACCESSIBLE_METHOD
 * @note spec: missing CTE check
 */
interface I010 {
    overload bar {nonexistent}
}
